<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.VerificationCodeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_kuwaity"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            android:src="@mipmap/kuwaity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_computerScienceEngineering"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/tajawal_regular"
            android:text="@string/ComputerScienceEngineering"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_kuwaity" />

        <TextView
            android:id="@+id/tv_InOutSystem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/tajawal_regular"
            android:text="@string/InOutSystem"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_computerScienceEngineering" />

        <TextView
            android:id="@+id/tv_confirm_msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/tajawal_regular"
            android:gravity="center"
            android:text="@string/confirm_msg"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_confirm"
            app:layout_constraintStart_toStartOf="@+id/btn_confirm"
            app:layout_constraintTop_toBottomOf="@+id/btn_confirm"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="@color/green_primary"
            android:fontFamily="@font/tajawal_regular"
            android:text="@string/confirm"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/text_input_extension_enterIdentityNum"
            app:layout_constraintStart_toStartOf="@+id/text_input_extension_enterIdentityNum"
            app:layout_constraintTop_toBottomOf="@+id/text_input_extension_enterIdentityNum" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_extension_enterIdentityNum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_et_login"
            android:fontFamily="@font/tajawal_regular"
            android:hint="@string/enterIdentityNum"
            android:maxLines="1"
            android:inputType="number"
            android:padding="12dp"
            android:textColorHint="@color/dark_gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_InOutSystem"
            app:layout_constraintStart_toStartOf="@+id/tv_InOutSystem"
            app:layout_constraintTop_toBottomOf="@+id/tv_InOutSystem" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
