<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".SecondActivity"
       >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

    <ImageView
        android:id="@+id/iv_kuwaity_second"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@mipmap/kuwaity" />

    <TextView
        android:id="@+id/tv_computerScienceEngineering_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/tajawal_regular"
        android:text="@string/ComputerScienceEngineering"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_kuwaity_second" />

    <TextView
        android:id="@+id/tv_InOutSystem_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/tajawal_regular"
        android:text="@string/InOutSystem"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_computerScienceEngineering_second" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_mobileNum"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="290dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="3"
        android:enabled="true"
        android:fontFamily="@font/tajawal_regular"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/dark_gray"
        app:boxStrokeWidth="1dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_InOutSystem_second">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_extension_mobileNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tajawal_regular"
            android:hint="@string/mobileNum"
            android:maxLines="1"
            android:textColorHint="@color/dark_gray"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/green_primary"
        android:fontFamily="@font/tajawal_regular"
        android:text="@string/LogIn"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_mobileNum" />

    <TextView
        android:id="@+id/tv_kuwaitCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/tajawal_regular"
        android:text="@string/KuwaitCode"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout_mobileNum"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayout_mobileNum"
        app:layout_constraintStart_toEndOf="@+id/iv_Kuwait_flag"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout_mobileNum" />

    <ImageView
        android:id="@+id/iv_Kuwait_flag"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_kuwaitCode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_kuwaitCode"
        app:srcCompat="@mipmap/kuwait_flag" />


</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
