<?xml version="1.0" encoding="utf-8"?>
  <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".FirstActivity"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_kuwaity"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="32dp"
                android:src="@mipmap/kuwaity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_computerScienceEngineering"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/tajawal_regular"
                android:text="@string/ComputerScienceEngineering"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_kuwaity" />

            <TextView
                android:id="@+id/tv_InOutSystem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/tajawal_regular"
                android:text="@string/InOutSystem"
                android:textColor="@color/black"
                android:textSize="35sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_computerScienceEngineering" />

            <TextView
                android:id="@+id/tv_confirm_msg"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/tajawal_regular"
                android:gravity="center"
                android:text="@string/confirm_msg"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_confirm" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_confirm"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/green_primary"
                android:fontFamily="@font/tajawal_regular"
                android:text="@string/confirm"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_enterIdentityNum" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_enterIdentityNum"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:layout_weight="3"
                android:enabled="true"
                android:fontFamily="@font/tajawal_regular"
                android:textColor="@color/black"
                android:textStyle="normal"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/dark_gray"
                app:boxStrokeWidth="1dp"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_InOutSystem">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_extension_enterIdentityNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/tajawal_regular"
                    android:hint="@string/enterIdentityNum"
                    android:maxLines="1"
                    android:textColorHint="@color/dark_gray"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
