<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".SecondActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_kuwaity_second"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            android:src="@mipmap/kuwaity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_computerScienceEngineering_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/tajawal_regular"
            android:text="@string/ComputerScienceEngineering"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_kuwaity_second" />

        <TextView
            android:id="@+id/tv_InOutSystem_second"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/tajawal_regular"
            android:text="@string/InOutSystem"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_computerScienceEngineering_second" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_extension_mobileNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_et_login"
            android:fontFamily="@font/tajawal_regular"
            android:hint="@string/mobileNum"
            android:inputType="phone"
            android:padding="12dp"
            android:paddingStart="54dp"
            android:paddingEnd="32dp"
            android:textColor="@color/black"
            android:textAlignment="viewStart"
            android:textColorHint="@color/dark_gray"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_InOutSystem_second" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/green_primary"
            android:fontFamily="@font/tajawal_regular"
            android:padding="8dp"
            android:text="@string/LogIn"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/text_input_extension_mobileNum"
            app:layout_constraintStart_toStartOf="@+id/text_input_extension_mobileNum"
            app:layout_constraintTop_toBottomOf="@+id/text_input_extension_mobileNum"
            app:layout_constraintVertical_bias="0.19999999" />



        <TextView
            android:id="@+id/tv_kuwaitCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/tajawal_regular"
            android:text="@string/KuwaitCode"
            android:textColor="@color/material_green_800"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/text_input_extension_mobileNum"
            app:layout_constraintStart_toStartOf="@+id/text_input_extension_mobileNum"
            app:layout_constraintTop_toTopOf="@+id/text_input_extension_mobileNum" />

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/gray1"
            app:layout_constraintBottom_toBottomOf="@+id/text_input_extension_mobileNum"
            app:layout_constraintStart_toEndOf="@+id/tv_kuwaitCode"
            app:layout_constraintTop_toTopOf="@+id/text_input_extension_mobileNum" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
